Add Google's ZX (JS Shell script interpreter)

--- a/playbook/default.yml
+++ b/playbook/default.yml
@@ -66,6 +66,7 @@
       - { name: yarn }
       - { name: yt-dlp }
       - { name: z }
+      - { name: zx }
 
     macOS:
       autocorrect: false
