Ability to clear the bottom-right hot corner
By default, this is set to a Quick Note option.

--- a/playbook/default.yml
+++ b/playbook/default.yml
@@ -70,9 +70,10 @@
 
     macOS:
       autocorrect: false
-      smartQuotes: false
-      showAllFiles: true
+      clearBottomRightHotCorner: true
       dockRecentApps: false
+      showAllFiles: true
+      smartQuotes: false
 
     nodejs: 18.12.0
 
