Ability to disable the CMD+SHIFT+A built-in command
This is really annoying with editors such as PHPStorm or other applications, as this pops open a new Terminal window anywhere.

--- a/playbook/default.yml
+++ b/playbook/default.yml
@@ -71,6 +71,7 @@
     macOS:
       autocorrect: false
       clearBottomRightHotCorner: true
+      disableSearchManPageIndexInTerminalShortcut: true
       dockRecentApps: false
       showAllFiles: true
       smartQuotes: false
