--- a/playbook/tasks/macOS.yml
+++ b/playbook/tasks/macOS.yml
@@ -57,6 +57,7 @@
   command: "plutil -extract NSServicesStatus json -o - {{ ansible_env.HOME }}/Library/Preferences/pbs.plist"
   register: command_shift_a_builtin
   changed_when: false
+  failed_when: (command_shift_a_builtin.rc == 1) and ('"No value at that key path or invalid key path" not in command_shift_a_builtin.stdout')
 
 - name: Disable macOS CMD+Shift+A "Search man Page Index in Terminal" built-in
   command: "plutil -replace NSServicesStatus -json \"{ \\\"com.apple.Terminal - Search man Page Index in Terminal - searchManPages\\\": { \\\"enabled_context_menu\\\": 0, \\\"enabled_services_menu\\\": 0, \\\"presentation_modes\\\": { \\\"ContextMenu\\\": 0, \\\"ServicesMenu\\\": 0 } } }\" {{ ansible_env.HOME }}/Library/Preferences/pbs.plist"
