--- a/playbook/tasks/applications.yml
+++ b/playbook/tasks/applications.yml
@@ -16,8 +16,8 @@
 - name: Install macOS Applications (Mac App Store)
   command: mas install "{{ item.id }}"
   register: install_macos_applications
-  changed_when: install_macos_applications.stdout.find(' is already installed') == -1
-  with_items: "{{ applications|default([]) }}"
+  loop: "{{ applications|default([]) }}"
+  changed_when: install_macos_applications.stderr.find(' is already installed') == -1
   when: (item.id is defined) and (item.name is defined) and not item.removed|default(false)
 
 # - name: Uninstall macOS Applications (Mac App Store)
