--- a/playbook/tasks/mysql-client.yml
+++ b/playbook/tasks/mysql-client.yml
@@ -1,12 +1,13 @@
 ---
-- name: Ensure the MySQL Client is installed
-  homebrew:
-    name: 'mysql-client'
-    state: latest
-  register: mysql_client
-
 - name: Ensure the MySQL Client is part of our path
   ansible.builtin.lineinfile:
     dest: "{{ ansible_env.HOME }}/.zshrc"
     line: 'export PATH="/opt/homebrew/opt/mysql-client/bin:$PATH"'
-    state: present
+    state: absent
+  register: mysql_client_path
+
+- name: Ensure the MySQL Client is removed
+  homebrew:
+    name: 'mysql-client'
+    state: absent
+  when: mysql_client_path is changed
