Attempt to improve GPG Agent stability

--- a/playbook/roles/yubikey/files/gnupg.gpg-agent-symlink.plist
+++ b/playbook/roles/yubikey/files/gnupg.gpg-agent-symlink.plist
@@ -12,5 +12,10 @@
         </array>
         <key>RunAtLoad</key>
         <true/>
+        <key>KeepAlive</key>
+        <dict>
+            <key>SuccessfulExit</key>
+            <false/>
+        </dict>
     </dict>
 </plist>
