--- a/playbook/roles/yubikey/files/gnupg.gpg-agent.plist
+++ b/playbook/roles/yubikey/files/gnupg.gpg-agent.plist
@@ -8,7 +8,10 @@
         <key>RunAtLoad</key>
         <true/>
         <key>KeepAlive</key>
-        <false/>
+        <dict>
+            <key>SuccessfulExit</key>
+            <false/>
+        </dict>
         <key>ProgramArguments</key>
         <array>
             <string>/opt/homebrew/bin/gpg-connect-agent</string>
