Changes for iTerm2 3.5

--- a/playbook/roles/iterm-tmux-zsh/files/dynamic-profile.plist
+++ b/playbook/roles/iterm-tmux-zsh/files/dynamic-profile.plist
@@ -89,6 +89,8 @@
          "BM Growl":true,
          "Command":"\/bin\/zsh --login",
          "Description":"Default",
+         "Custom Locale" : "en_US.UTF-8",
+         "Set Local Environment Vars" : 0,
          "Mouse Reporting":true,
          "Screen":-1,
          "Selection Color":{
